update and fixed announcement content css with link word wrap and image size

--- a/src/app/index/announcement/announcementdetail/announcementdetail.component.scss
+++ b/src/app/index/announcement/announcementdetail/announcementdetail.component.scss
@@ -56,39 +56,64 @@
   }
 
 }
-:host {
-  ::ng-deep strong{
+:host ::ng-deep{
+  strong{
     font-weight: 900;
   }
 
-  ::ng-deep a{
+  a{
     color: #009DC0 !important;
     text-decoration: underline;
   }
 
-  ::ng-deep .text-tiny{
+  .text-tiny{
     font-size: 12px;
     line-height: 16px;
   }
 
-  ::ng-deep .text-small{
+  .text-small{
     font-size: 16px;
     line-height: 22px;
   }
 
-  ::ng-deep .text-big{
+  .text-big{
     font-size: 24px;
     line-height: 32px;
   }
 
-  ::ng-deep .text-huge{
+  .text-huge{
     font-size: 28px;
   }
 
-  ::ng-deep blockquote{
+  blockquote{
     padding: 10px;
     background-color: #009dc027;
     border-left: 20px solid #009dc0;
     border-radius: 6px;
+  }
+  
+  // announcement content
+  a span{
+    word-wrap: break-word;
+  }
+
+  figure.image{
+    width: inherit !important;
+
+    img{
+      width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 552px){
+    blockquote{
+      p{
+        margin-left: 10px !important; 
+      }
+    }
+
+    .image_resized{
+      width: 100% !important;
+    }
   }
 }
